[package]
name = "bevy_sytem_graph"
version = "0.1.1"
edition = "2021"
authors = ["Hourai Teahouse Developers <contact@houraiteahouse.net>"]
description = "Utilities for creating strictly ordered execution graphs of systems for the Bevy game engine. "
homepage = "https://github.com/HouraiTeahouse/bevy_system_graph"
repository = "https://github.com/HouraiTeahouse/bevy_system_graph"
keywords = ["bevy", "ecs", "gamedev"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_ecs = "0.6"
bevy_ecs_macros = "0.6"
bevy_utils = "0.6"